# PokeMaster

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  LICENSE  README.md  appveyor.yml  sonar-project.properties
.github/workflows/: audit.yml  build.yml  macos.yml  rust.yml  ubuntu.yml  ubuntu_codecov.yml  windows.yml
CMake/: CompileOptions.cmake
Includes/PokeMaster/: PokeMaster.hpp  Test.hpp
Includes/PokeMaster/Commons/: Constants.hpp  Tags.hpp  Utils.hpp
Includes/PokeMaster/Components/: Index.hpp  Level.hpp  Name.hpp  Natures.hpp  Stats.hpp  Types.hpp
Includes/PokeMaster/Enums/: Ability.def  PokemonEnums.hpp
Includes/PokeMaster/Helpers/: ItemHelpers.hpp  MoveHelpers.hpp  PokemonHelpers.hpp
Includes/PokeMaster/Loaders/: AbilityLoader.hpp  ItemLoader.hpp  MoveLoader.hpp  PokemonLoader.hpp
Includes/PokeMaster/Managers/: AbilityManager.hpp  ItemManager.hpp  MoveManager.hpp  PokemonManager.hpp
Includes/PokeMaster/Models/: Ability.hpp  Battle.hpp  Item.hpp  Move.hpp  Pokemon.hpp  Stats.hpp
Includes/PokeMaster/Systems/: Game.hpp
Resources/: abilities.json  items.json  moves.json  pokemon.json  pokemon_stats.json  pokemon_types.json
Scripts/: Dockerfile.focal  Dockerfile.focal.clang-latest  Dockerfile.focal.gcc-latest  azure_pipelines_build_linux.yml  azure_pipelines_build_windows_vs2017.yml  azure_pipelines_build_windows_vs2019.yml  header_gen.py  travis_build_docker.sh
Sources/PokeMaster/: CMakeLists.txt  Test.cpp
Sources/PokeMaster/Helpers/: ItemHelpers.cpp  MoveHelpers.cpp  PokemonHelpers.cpp
Sources/PokeMaster/Loaders/: AbilityLoader.cpp  ItemLoader.cpp  MoveLoader.cpp  PokemonLoader.cpp
Sources/PokeMaster/Managers/: AbilityManager.cpp  ItemManager.cpp  MoveManager.cpp  PokemonManager.cpp
Sources/PokeMaster/Models/: Ability.cpp  Battle.cpp  Item.cpp  Move.cpp  Pokemon.cpp  Stats.cpp
Sources/PokeMaster/Systems/: Game.cpp
Tests/UnitTests/: CMakeLists.txt  SimpleTest.cpp  main.cpp
Tests/UnitTests/Managers/: AbilityMangerTests.cpp  ItemManagerTests.cpp  MoveManagerTests.cpp  PokemonManagerTests.cpp
Tests/UnitTests/Models/: PokemonTests.cpp
Tests/UnitTests/Systems/: GameTests.cpp
src/: lib.rs
